# SaySo

./: .dockerignore  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  HANDOFF.md  gen_voice_samples.py  main.py  pyproject.toml
.do/: app.yaml
backend/: enroll.py  limits.py  main.py  omni.py  personas.db  personas.py  store.py  voices.py
frontend/: package-lock.json  package.json
frontend/public/worklets/: mic-processor.js
frontend/src/app/: apple-icon.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
frontend/src/app/app/: layout.tsx  page.tsx
frontend/src/app/converse/[personaId]/: layout.tsx  page.tsx
frontend/src/app/create/: layout.tsx  page.tsx
frontend/src/components/: AppNav.tsx  ConversationControls.tsx  EditPersonaModal.tsx  PersonaCard.tsx  SharedNav.tsx  ThemeToggle.tsx  VoicePicker.tsx  VoiceprintMark.tsx
frontend/src/components/landing/: HeroOrb.tsx
frontend/src/components/ui/: voice-powered-orb.tsx
frontend/src/hooks/: useMicCapture.ts  usePlayback.ts  useWebSocket.ts
frontend/src/lib/: audioTrim.ts  audioUtils.ts  constants.ts  session.ts  wavEncoder.ts
tests/: test_enroll.py  test_omni_direct.py  test_voices.py  test_voices_audio.py  test_ws.py
