[project]
name = "mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
    "websockets>=12.0",
]
